# digit-classifier-app

./: README.md  app.py  draw.py  pictures.py  pyproject.toml  requirements.txt  resources.py  train_model.py  webcam.py
.streamlit/: config.toml
